MOSIP-42654 - Push the latest code to release branch 1.3.x branch from develop br
Signed-off-by: Prathmesh Jadhav <prathmesh.j@cyberpwn.com>

--- a/api-test/Dockerfile
+++ b/api-test/Dockerfile
@@ -1,8 +1,4 @@
-<<<<<<< HEAD:api-test/Dockerfile
 FROM mosipid/openjdk-21-jre:21.0.4
-=======
-FROM openjdk:11
->>>>>>> 5cd203879b (MOSIP-34948 - reverted to java11):apitest/Dockerfile
 
 ARG SOURCE
 ARG COMMIT_HASH
@@ -27,15 +23,6 @@ ARG container_user_gid=1001
 
 ARG KUBECTL_VERSION=1.22.9
 
-# install packages and create user
-RUN apt-get -y update \
-&& apt-get install -y unzip jq \
-&& groupadd -g ${container_user_gid} ${container_user_group} \
-&& useradd -u ${container_user_uid} -g ${container_user_group} -s /bin/sh -m ${container_user} \
-&& curl -LO "https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl" \
-&& chmod +x kubectl \
-&& mv kubectl /usr/local/bin/
-
 # set working directory for the user
 WORKDIR /home/${container_user}
 
@@ -45,14 +32,17 @@ ENV work_dir=/home/${container_user}
 COPY ./api-test/target $work_dir/
 COPY entrypoint.sh $work_dir
 
-RUN chmod +x $work_dir/entrypoint.sh
-
-#ADD ./testNgXmlFiles/ $work_dir/testNgXmlFiles/
-
-# change permissions of file inside working dir
-RUN chown -R ${container_user}:${container_user} /home/${container_user} /usr/local/openjdk-11/lib/security/cacerts
-
-RUN chmod 644 /usr/local/openjdk-11/lib/security/cacerts
+# install packages and create user
+RUN apt-get -y update \
+&& apt-get install -y unzip jq curl \
+&& groupadd -g ${container_user_gid} ${container_user_group} \
+&& useradd -u ${container_user_uid} -g ${container_user_group} -s /bin/bash -m ${container_user} \
+&& curl -LO "https://storage.googleapis.com/kubernetes-release/release/v${KUBECTL_VERSION}/bin/linux/amd64/kubectl" \
+&& mkdir -p /home/${container_user} \
+&& chmod +x kubectl $work_dir/entrypoint.sh \
+&& mv kubectl /usr/local/bin/ \
+&& chown -R ${container_user}:${container_user} /home/${container_user} /etc/ssl/certs/java/cacerts \
+&& chmod 644 /etc/ssl/certs/java/cacerts
 
 # select container user for all tasks
 USER ${container_user_uid}:${container_user_gid}
