POM Version Changes [MOSIP-42775] (#914)
* POM Version Changes [MOSIP-42775]

Signed-off-by: GOKULRAJ136 <110164849+GOKULRAJ136@users.noreply.github.com>

* Snapshot changes

Signed-off-by: GOKULRAJ136 <110164849+GOKULRAJ136@users.noreply.github.com>

---------

Signed-off-by: GOKULRAJ136 <110164849+GOKULRAJ136@users.noreply.github.com>

--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.0.2</version>
+		<version>1.2.0.3-SNAPSHOT</version>
 	</parent>
-	<version>1.2.0.2</version>
+	<version>1.2.0.3-SNAPSHOT</version>
 
 
 	<artifactId>pre-registration-core</artifactId>
