--- a/pre-registration/pre-registration-core/pom.xml
+++ b/pre-registration/pre-registration-core/pom.xml
@@ -7,9 +7,9 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.2.0.3-SNAPSHOT</version>
+		<version>1.2.0.3</version>
 	</parent>
-	<version>1.2.0.3-SNAPSHOT</version>
+	<version>1.2.0.3</version>
 
 
 	<artifactId>pre-registration-core</artifactId>
