--- a/helm/prereg-datasync/Chart.yaml
+++ b/helm/prereg-datasync/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: prereg-datasync
 description: A Helm chart for MOSIP Pre-registration Datasync service
 type: application
-version: 12.0.2-develop
+version: 12.0.3
 appVersion: ""
 dependencies:
   - name: common
