--- a/helm/prereg-application/Chart.yaml
+++ b/helm/prereg-application/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: prereg-application
 description: A Helm chart for MOSIP Pre-registration Application service
 type: application
-version: 12.0.3
+version: 12.0.3-develop
 appVersion: ""
 dependencies:
   - name: common
