--- a/api-test/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
+++ b/api-test/src/main/resources/preReg/GetAppointmentDetails/GetAppointmentDetails.yml
@@ -5,6 +5,7 @@ GetAppointmentDetails:
       description: Retrieve appointment details booked by a valid PRID
       role: batch
       restMethod: get
+      additionalDependencies: TC_prereg_BookAppointmentByPRID_01
       inputTemplate: preReg/GetAppointmentDetails/getAppointmentDetails
       outputTemplate: preReg/GetAppointmentDetails/getAppointmentDetailsResult
       input: '{
@@ -19,6 +20,7 @@ GetAppointmentDetails:
       description: Retrieve appointment details for a cancelled appointment
       role: batch
       restMethod: get
+      additionalDependencies: TC_prereg_BookAppointment_03,TC_prereg_CancelAppointment_01
       inputTemplate: preReg/GetAppointmentDetails/getAppointmentDetails
       outputTemplate: preReg/GetAppointmentDetails/getAppointmentDetailsResult
       input: '{
@@ -33,6 +35,7 @@ GetAppointmentDetails:
       description: Retrieve appointment details for a valid preregistrationID
       role: batch
       restMethod: get
+      additionalDependencies: TC_prereg_BookAppointment_01
       inputTemplate: preReg/GetAppointmentDetails/getAppointmentDetails
       outputTemplate: preReg/GetAppointmentDetails/getAppointmentDetailsResult
       input: '{
