MOSIP-43301 - Added the prefix context to run in multiple instances at same time
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/preReg/DeleteBooking/DeleteBooking.yml
+++ b/api-test/src/main/resources/preReg/DeleteBooking/DeleteBooking.yml
@@ -8,8 +8,8 @@ DeleteBooking:
       inputTemplate: preReg/DeleteBooking/deleteBooking
       outputTemplate: preReg/DeleteBooking/deleteBookingResult
       input: '{
-  "preRegistrationId":"$ID:CreatePrereg_All_Valid_Smoke_sid_preRegistrationId$"
+  "preRegistrationId":"$ID:CreatePrereg_All_Valid_Smoke_sid_pos_preRegistrationId$"
 }'
       output: '{
-  "deletedBy":"robin.hood@mailinator.com"
+  "deletedBy":"$PREREGUSER$"
 }'   
