--- a/api-test/src/main/resources/preReg/SendOtp/SendOtp.yml
+++ b/api-test/src/main/resources/preReg/SendOtp/SendOtp.yml
@@ -10,7 +10,7 @@ SendOtp:
       input: '{
   "version": "1.0",
   "requesttime": "$TIMESTAMP$",
-  "userId": "9090872300",
+  "userId": "$PHONENUMBER$",
   "id": "mosip.pre-registration.login.sendotp"
 }'
       output: '{
@@ -94,7 +94,7 @@ SendOtp:
       input: '{
   "version": "1.0",
   "requesttime": "$TIMESTAMP$",
-  "userId": "john.doe@mailinator.com",
+  "userId": "$EMAILVALUE$",
   "id": "mosip.pre-registration.login.sendotp"
 }'
       output: '{
@@ -165,38 +165,4 @@ SendOtp:
       "errorCode": "PRG_PAM_LGN_008"
     }
   ]
-}'
-   Prereg_SendOtp_All_Valid_Smoke_Phone_sid:
-      endPoint: /preregistration/v1/login/sendOtp/langcode
-      uniqueIdentifier: TC_prereg_SendOtp_09
-      description: Send OTP with a valid phone number on the phone channel
-      role: batch
-      restMethod: post
-      inputTemplate: preReg/SendOtp/sendotp
-      outputTemplate: preReg/SendOtp/sendotpResult
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "9090872300",
-  "id": "mosip.pre-registration.login.sendotp"
-}'
-      output: '{
-  "status": "success"
-}'
-   Prereg_SendOtp_All_Valid_Smoke_email_sid:
-      endPoint: /preregistration/v1/login/sendOtp/langcode
-      uniqueIdentifier: TC_prereg_SendOtp_10
-      description: Send OTP with a valid phone number on the phone channel
-      role: batch
-      restMethod: post
-      inputTemplate: preReg/SendOtp/sendotp
-      outputTemplate: preReg/SendOtp/sendotpResult
-      input: '{
-  "version": "1.0",
-  "requesttime": "$TIMESTAMP$",
-  "userId": "john.doe@mailinator.com",
-  "id": "mosip.pre-registration.login.sendotp"
-}'
-      output: '{
-  "status": "success"
 }'
