--- a/pre-registration/pre-registration-datasync-service/pom.xml
+++ b/pre-registration/pre-registration-datasync-service/pom.xml
@@ -24,6 +24,7 @@
 		<pre.registration.application.service.version>1.2.1-SNAPSHOT</pre.registration.application.service.version>
 		<pre.application.service.version>1.2.1-SNAPSHOT</pre.application.service.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
+		<spring.boot.maven.plugin.version>3.2.3</spring.boot.maven.plugin.version>
 	</properties>
 
 	<dependencyManagement>
@@ -140,6 +141,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.maven.plugin.version}</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
