--- a/pre-registration/pre-registration-captcha-service/pom.xml
+++ b/pre-registration/pre-registration-captcha-service/pom.xml
@@ -24,6 +24,7 @@
 		<kernel.bom.version>1.2.1-SNAPSHOT</kernel.bom.version>
 		<pre.registration.core.version>1.2.1-SNAPSHOT</pre.registration.core.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
+		<spring.boot.maven.plugin.version>3.2.3</spring.boot.maven.plugin.version>
 	</properties>
 
 	<dependencyManagement>
