--- a/pre-registration/pre-registration-batchjob/pom.xml
+++ b/pre-registration/pre-registration-batchjob/pom.xml
@@ -115,7 +115,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<version>${spring.boot.maven.plugin.version}</version>
+				<version>3.2.3</version>
 				<configuration>
 					<executable>true</executable>
 					<layout>ZIP</layout>
