updated db script filename and spring boot maven version
Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

--- a/pre-registration/pom.xml
+++ b/pre-registration/pom.xml
@@ -209,6 +209,11 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>3.2.3</version>
+				</plugin>
+				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven.compiler.version}</version>
