[MOSIP-43615] corrected typo
Signed-off-by: Chandra Keshav Mishra <chandrakeshavmishra@gmail.com>

--- a/helm/prereg-batchjob/values.yaml
+++ b/helm/prereg-batchjob/values.yaml
@@ -225,7 +225,7 @@ lifecycleHooks:
         - -c
         - sleep 30
 
-## Termination grace perios : the maximum amount of time (in seconds) Kubernetes will wait for a container to gracefully shut down
+## Termination grace period : the maximum amount of time (in seconds) Kubernetes will wait for a container to gracefully shut down
 terminationGracePeriodSeconds: 60
 
 ## Custom Liveness probes for
