MOSIP-43677 - Updated the latest code in release-1.3.x branch
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

--- a/api-test/src/main/resources/config/prereg.properties
+++ b/api-test/src/main/resources/config/prereg.properties
@@ -48,6 +48,9 @@ mosip_crvs1_client_secret =
 # Enable or disable debugging mode (yes/no).
 enableDebug = no
 
+# Whether to use pre-configured OTP (true/false).
+usePreConfiguredOtp = false
+
 # Mock Notification Channels (email/phone/email,phone).
 mockNotificationChannel = email,phone
 
@@ -75,5 +78,3 @@ moduleNamePattern =
 # X-XSS-Protection: Controls the XSS (Cross-Site Scripting) filter in browsers.
 # Values: (yes/no)
 xssProtectionCheck = no
-
-testCasesToExecute= 
