--- a/api-test/pom.xml
+++ b/api-test/pom.xml
@@ -8,7 +8,7 @@
 	<name>apitest-prereg</name>
 	<description>Parent project of MOSIP Pre-Registration apitests</description>
 	<url>https://github.com/mosip/pre-registration</url>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 
 	<licenses>
 		<license>
@@ -62,7 +62,7 @@
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 
 		<git.commit.id.plugin.version>3.0.1</git.commit.id.plugin.version>
-		<fileName>apitest-prereg-1.3.0-SNAPSHOT-jar-with-dependencies</fileName>
+		<fileName>apitest-prereg-1.3.0-jar-with-dependencies</fileName>
 	</properties>
 
 	<dependencies>
