--- a/pre-registration/pre-registration-batchjob/pom.xml
+++ b/pre-registration/pre-registration-batchjob/pom.xml
@@ -7,12 +7,12 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 
 	<artifactId>pre-registration-batchjob</artifactId>
 	<name>pre-registration-batchjob</name>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -127,7 +127,7 @@
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>${maven.deploy.plugin.version}</version>
 				<configuration>
-					<skip>true</skip>
+					<skip>false</skip>
 				</configuration>
 				<executions>
 					<execution>
@@ -137,7 +137,7 @@
 							<goal>deploy</goal>
 						</goals>
 						<configuration>
-							<skip>true</skip>
+							<skip>false</skip>
 						</configuration>
 					</execution>
 				</executions>
