--- a/pre-registration/pre-registration-captcha-service/pom.xml
+++ b/pre-registration/pre-registration-captcha-service/pom.xml
@@ -6,23 +6,23 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 	
 	<groupId>io.mosip.preregistration.captcha</groupId>
 	<artifactId>pre-registration-captcha-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 
 	<name>pre-registration-captcha-service</name>
 	<description>A pre-registration service to generate and validate captcha</description>
 	
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.keymanager.version>1.3.0-SNAPSHOT</kernel.keymanager.version>
-		<kernel.transliteration.icu4j.version>1.3.0-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.idobjectvalidator.version>1.3.0-SNAPSHOT</kernel.idobjectvalidator.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
-		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
+		<kernel.keymanager.version>1.3.0</kernel.keymanager.version>
+		<kernel.transliteration.icu4j.version>1.3.0</kernel.transliteration.icu4j.version>
+		<kernel.idobjectvalidator.version>1.3.0</kernel.idobjectvalidator.version>
+		<kernel.bom.version>1.3.0</kernel.bom.version>
+		<pre.registration.core.version>1.3.0</pre.registration.core.version>
 		<maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
 		<central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
 	</properties>
@@ -234,7 +234,7 @@
 						<artifactId>maven-deploy-plugin</artifactId>
 						<version>${maven.deploy.plugin.version}</version>
 						<configuration>
-							<skip>true</skip>
+							<skip>false</skip>
 						</configuration>
 						<executions>
 							<execution>
@@ -244,7 +244,7 @@
 									<goal>deploy</goal>
 								</goals>
 								<configuration>
-									<skip>true</skip>
+									<skip>false</skip>
 								</configuration>
 							</execution>
 						</executions>
