--- a/pre-registration/pre-registration-application-service/pom.xml
+++ b/pre-registration/pre-registration-application-service/pom.xml
@@ -6,24 +6,24 @@
 	<parent>
 		<groupId>io.mosip.preregistration</groupId>
 		<artifactId>pre-registration-parent</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
 	
 	<artifactId>pre-registration-application-service</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
+	<version>1.3.0</version>
 	<name>Pre-Registration Application Service Project</name>
 	<description>Maven project of MOSIP Pre-Registration Service</description>
 	
 	<properties>
 		<!-- Mosip kernel -->
-		<kernel.khazana.version>1.3.0-SNAPSHOT</kernel.khazana.version>
-		<kernel.idobjectvalidator.version>1.3.0-SNAPSHOT</kernel.idobjectvalidator.version>
-		<kernel.templatemanager.velocity.version>1.3.0-SNAPSHOT</kernel.templatemanager.velocity.version>
-		<kernel.qrcodegenerator.zxing.version>1.3.0-SNAPSHOT</kernel.qrcodegenerator.zxing.version>
-		<kernel.transliteration.icu4j.version>1.3.0-SNAPSHOT</kernel.transliteration.icu4j.version>
-		<kernel.bom.version>1.3.0-SNAPSHOT</kernel.bom.version>
-		<mosip.openid.bridge.version>1.3.0-SNAPSHOT</mosip.openid.bridge.version>
-		<pre.registration.core.version>1.3.0-SNAPSHOT</pre.registration.core.version>
+		<kernel.khazana.version>1.3.0</kernel.khazana.version>
+		<kernel.idobjectvalidator.version>1.3.0</kernel.idobjectvalidator.version>
+		<kernel.templatemanager.velocity.version>1.3.0</kernel.templatemanager.velocity.version>
+		<kernel.qrcodegenerator.zxing.version>1.3.0</kernel.qrcodegenerator.zxing.version>
+		<kernel.transliteration.icu4j.version>1.3.0</kernel.transliteration.icu4j.version>
+		<kernel.bom.version>1.3.0</kernel.bom.version>
+		<mosip.openid.bridge.version>1.3.0</mosip.openid.bridge.version>
+		<pre.registration.core.version>1.3.0</pre.registration.core.version>
 		<!-- Others -->
 		<org.hamcrest.version>2.1</org.hamcrest.version>
 		<lombok.version>1.18.30</lombok.version>
