--- a/deploy/prereg-apitestrig/values.yaml
+++ b/deploy/prereg-apitestrig/values.yaml
@@ -3,5 +3,5 @@ modules:
     enabled: true
     image:
       repository: mosipid/apitest-prereg
-      tag: 1.3.0-beta.1
+      tag: 1.3.0
       pullPolicy: Always
